# ChangeLog for dev-libs/mongo-c-driver
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/mongo-c-driver/ChangeLog,v 1.5 2013/10/25 14:24:43 jer Exp $

  25 Oct 2013; Jeroen Roovers <jer@gentoo.org> mongo-c-driver-0.7.1.ebuild:
  Marked ~hppa too.

  03 Feb 2013; Agostino Sarubbo <ago@gentoo.org> mongo-c-driver-0.7.1.ebuild:
  Add ~ppc, wrt bug #453414

*mongo-c-driver-0.7.1 (21 Jan 2013)

  21 Jan 2013; Ultrabug <ultrabug@gentoo.org> +mongo-c-driver-0.7.1.ebuild:
  Version bump fix #449120

  29 Oct 2012; Ultrabug <ultrabug@gentoo.org> metadata.xml:
  Add myself as maintainer to keep track of this ebuild.

*mongo-c-driver-0.6 (28 Oct 2012)

  28 Oct 2012; Markos Chandras <hwoarang@gentoo.org>
  +mongo-c-driver-0.6.ebuild, +metadata.xml:
  Initial commit. Thanks to Johan Bergstrom <bugs@bergstroem.nu> who will
  proxy-maintain it. Bug #436746