@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST mongo-c-driver-0.6.tar.gz 94393 SHA256 7c7cf89726fb74d94c8f65722f5f8ccf35ccab2738b95003245d55f1f53d56e9 SHA512 2d6e3a40bbddd12ed7b2c1624b692ab25324135b08646a496b0d114699898aaee4541c541c354c2b0406a1cc375b2f07ab9cf538ea04f4751298e8d0f2e3bf53 WHIRLPOOL 5a81c74e6f6803f565887822127d6f6fd9f8ef147b812e0744d58af507b877f28bead4705cbebbb9c2c93476d70f8d138f11cddb1c251464bb0026d5ee802e65
 DIST mongo-c-driver-0.7.1.tar.gz 108537 SHA256 6670b50bb4232cc617a114d1320ea97abc55f9570b4ebf53e1e6c22671ffc328 SHA512 5c6996dc47ecbe4d77971e3aa983a877e7de736bf358c467808eceba8b1a5eea342376249cdc682a034fc7ec39290d234527cec3c3732686f184281a72aec724 WHIRLPOOL c3aadbb61bd7bd295398b4510708f95c0a05383e80baba510609870aa39f5442d4bbfb6441889f605578e07e2c97d44d2e2d75b5a2ec6950a362825c6110fbd3
+DIST mongo-c-driver-0.8.1.tar.gz 124053 SHA256 9575f05fa87fe1f7c6562b1ec9202fd4b8a98950a4d65ea44c1c62fadc2b48b0 SHA512 7b61ac4b1b154ee1f518eddb2bbc0cdafe0da8786eed4475e5703c2a735ec5a09efde59f5bfa45fb226cbce24d8c0ba0de403d8fc3e561c0e48507dfb07962b1 WHIRLPOOL 1474a7b5fced35b511cedd97f558f284d70135c591bd6d671c34519f68097a1e2e6a32a6323acfa4ea3d0146529d3be79f2f91d1187ba3d01a7da6aaacaabf2d
 EBUILD mongo-c-driver-0.6.ebuild 1055 SHA256 32d4b2dff894a200e9729fc23e6a46d83e0e7127183ce9b56887afa8dc5c93d1 SHA512 5050f86224d737ff0f1efb1bcde2bb391b3e136d28aca9f2900579d63669b5afaf3abe4cba0c9ab2ff746f524498d2713e8948afd5bcc3c9c5814e02d171ba0a WHIRLPOOL f6a19ef5a9be957f899449d54fadf1f7d4985b908ec74a7d851a0f8a101e26b4bad63af5205ad308c59754522b3710caa314c1cfb24f2bf7db3adeacf51cd5fe
 EBUILD mongo-c-driver-0.7.1.ebuild 1062 SHA256 774ab8bd2bdd93a17261e5d676c0b2eff3ab53ae37a9cd16d9ce79b290548d72 SHA512 ed88d8ee3024a2cf8b6b754cf10eeb250a460b3e40fce887ea290a98066e6eb52f5f81e8a4c9de508d6dc0a5fc5f0e525beb0464ddb2f15595fd259eeaef051b WHIRLPOOL 5ee17064c3e667e109d6f7d4b468519b03aef725813738d1f9714c1d06fdaf8e83d5a4edff2294d80c5abf6ea8a22aa7d43d5e0f3b29e1dd4d62eeee04c1ee3e
-MISC ChangeLog 919 SHA256 5634ccc3d3085384266124f83258745ecb3d3ea2f6c34b0701a660c48e6f934a SHA512 c7575d94d92abf399a8fc74adafdae4dfa643309d196fea10276b46d99940cbdab29c1aedd398c665199b312b8a098e762758302b4b8d8279dfbfabb2af7132e WHIRLPOOL ae6036e278429fd439b2648eebd9ff94235575644b18c50031bfe93bcbb085ef69ac75bb8dc354dd6430b418336348032127359acc9ee11c545a341cd57d476d
+EBUILD mongo-c-driver-0.8.1.ebuild 1067 SHA256 64e2b5fddf410a129cbd560d9bf10930801155695d0f66f3d8b3b1a3cd1e3c9e SHA512 f706194468bd06aed2987bfff7e07e2dd321cd2b126d392553645713105968fd8bb78ef12d84fbc7ba6352c8d3c2664b107ca77c1b3bb9a21279f57955894d26 WHIRLPOOL 10a677221e61c4cb77880c46e118bcb767212e12c9d8aaba72b13b1898a2a38d63148ce6134c5ce74a810dc2b710f8804d7c0bda06aa7da493078ad04f49cda1
+MISC ChangeLog 1085 SHA256 f520e783b02fb24506439f270d9156c3eea92c72b027dbff5c897fd2fde29e28 SHA512 0e0ce2d7f224dad65538c6f3705ce9ebcf3c5ca973208e90bd0afc03333f6d0b9d13ccd63b89056a0562d9aed47f16b88f04eac22f078d70ece45f2d2c495ee6 WHIRLPOOL 23d64d2bd68caf5f4c32f60a2a1df12224c70c593ea08cdf6fc811f35af5f75e6c22522b7ee4ed999e63dfe3d84bbb6f8149b6d76cbdbfd3c279946169650b08
 MISC metadata.xml 412 SHA256 dfb6e343d26a3fad209c0e2e0d2d66dce241ebfbc33e208c113dbfde989445ed SHA512 e4e29acd6759fcd9e188a45199f60bf81150dfc89f6ea2ee32d9e8b69208c91fd00675b290615265c30d5acce8dd4a7bffc70720055abf3198cb7f92c3c5857a WHIRLPOOL d889b77c6dc51c7210885a1c8a08788f3c96c2fd0baaadc239c0707305f09db201c9d86601cddc92cb5caebc9e4465c44a202f5e9f66d7f4dcec314607c381e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJqfy0ACgkQVWmRsqeSphM9xwCbB/amzksE5aYgfyhr2IfnVveL
-A1gAmQFTKFA1YCOsaRpIog9fzAlwiuOq
-=dN6F
+iEYEAREIAAYFAlM0Pg4ACgkQp5vW4rUFj5o40gCfZgrRYsV+7bJ1kGQQ5nM+Zx2v
+P54AoJ5XCRuW6C3eFqmezh41Y/EZ2+1O
+=XK89
 -----END PGP SIGNATURE-----
