@@ -1,0 +1,47 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/mongo-c-driver/mongo-c-driver-0.8.1.ebuild,v 1.1 2014/03/27 15:05:14 chainsaw Exp $
+
+EAPI="4"
+PYTHON_DEPEND="2"
+
+inherit multilib python
+
+DESCRIPTION="C Driver for MongoDB"
+HOMEPAGE="http://www.mongodb.org/ https://github.com/mongodb/mongo-c-driver"
+SRC_URI="https://github.com/mongodb/${PN}/tarball/v${PV/_/} -> ${P}.tar.gz"
+
+LICENSE="Apache-2.0"
+SLOT="0"
+KEYWORDS="~amd64 ~hppa ~ppc ~x86"
+IUSE="doc static-libs"
+
+# tests fails to build
+RESTRICT="test"
+
+RDEPEND=""
+DEPEND="doc? ( dev-python/sphinx )"
+
+pkg_setup() {
+	python_set_active_version 2
+}
+
+src_unpack() {
+	unpack ${A}
+	mv *-${PN}-* "${S}"
+}
+
+src_compile() {
+	emake
+	use doc && make -C docs/source/sphinx html
+}
+
+src_install() {
+	emake install \
+		INSTALL_LIBRARY_PATH="${D}/usr/$(get_libdir)" \
+		INSTALL_INCLUDE_PATH="${D}/usr/include"
+
+	use static-libs || find "${ED}" -name '*.a' -exec rm -f {} +
+
+	use doc && dohtml -r docs/source/sphinx/build/html/*
+}
