@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile install setup unpack
+DEPEND=doc? ( dev-python/sphinx ) =dev-lang/python-2*
+DESCRIPTION=C Driver for MongoDB
+EAPI=4
+HOMEPAGE=http://www.mongodb.org/ https://github.com/mongodb/mongo-c-driver
+IUSE=doc static-libs
+KEYWORDS=~amd64 ~hppa ~ppc ~x86
+LICENSE=Apache-2.0
+RDEPEND==dev-lang/python-2*
+RESTRICT=test
+SLOT=0
+SRC_URI=https://github.com/mongodb/mongo-c-driver/tarball/v0.8.1 -> mongo-c-driver-0.8.1.tar.gz
+_eclasses_=multilib	fac675dcccf94392371a6abee62d909f	python	be9965681d83c3980660a2660ac95e95	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=3e475289379b0c40c79fe122464b3bb5
