@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/mongo-c-driver
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/mongo-c-driver/ChangeLog,v 1.5 2013/10/25 14:24:43 jer Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/mongo-c-driver/ChangeLog,v 1.6 2014/03/27 15:05:14 chainsaw Exp $
+
+*mongo-c-driver-0.8.1 (27 Mar 2014)
+
+  27 Mar 2014; Tony Vroon <chainsaw@gentoo.org> +mongo-c-driver-0.8.1.ebuild:
+  Bump to latest available "legacy" version.
 
   25 Oct 2013; Jeroen Roovers <jer@gentoo.org> mongo-c-driver-0.7.1.ebuild:
   Marked ~hppa too.
